# dublette

./: .dprint.jsonc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  hk.pkl  mise.toml  pyproject.toml  release-plz.toml  setup
.github/workflows/: build-binaries.yml  main.yml  master.yml  release.yml  semantic-pr.yml
docs/: CNAME  README.md  _sidebar.md  cli-reference.md  examples.md  index.html
docs/about/: license.md
docs/getting-started/: installation.md  quick-start.md
docs/how-it-works/: deduplication-process.md  perceptual-hashing.md
meta/: CONTEXT.md  plan.md
meta/adr/: 0001-compute-only-deduplication-core.md
meta/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: cli.rs  dedupe.rs  delete.rs  hash.rs  lib.rs  main.rs  report.rs  scan.rs
src/imgdedup/: main.py
tests/: cli.rs  test_main.py
