[package]
name = "imgdedup"
version = "0.1.0"
edition = "2024"
description = "Deduplicate images and videos using perceptual hashing"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dialoguer = "0.11"
eyre = "0.6"
image = "0.23"
img_hash = "3.2"
indicatif = "0.17"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
walkdir = "2"
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
