[project]
name = "imgdedup"
version = "0.1.0"
description = "Deduplicate images and videos using perceptual hashing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "imagehash>=4.3",
]

[project.scripts]
imgdedup = "imgdedup.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imgdedup"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
]
